--- a/user-feedback.html
+++ b/user-feedback.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class='col-md-4 text-left'>
                  <div class='ufb-rating'> Rating: {{rating}} </div>
-                <a id='cmu{{id}}' href="" class='ufb-rating'>▲</a>
+                <a id='cmu{{id}}' href="" class='ufb-rating'><i class="ion-ios-plus"></i></a>
                 <a id='cmd{{id}}' href="" class='ufb-rating'>▼</a>
                    </div>
             
