revert to old one

--- a/user-feedback.html
+++ b/user-feedback.html
@@ -1,6 +1,6 @@
 <template name="userfeedback">
     {{#unless currTopic}}
-     <div class="ContentBgColor" style="height:100vh; margin-top:-50px;">
+     <div class="" style="height:100vh; margin-top:-50px;">
      <div class="SubHeaderWrapper">
 
         <div class="SubHeaderLeftBg col-md-9 col-lg-8 no-padding">
@@ -200,7 +200,7 @@
 -->
     </div>
     {{/unless}} 
-     <div class="ContentBgColor" style="height:100vh; margin-top:-50px;">
+     <div class="" style="height:100vh; margin-top:-50px;">
     {{#if currTopic}}
 <!--
 
