--- a/user-feedback.html
+++ b/user-feedback.html
@@ -1,7 +1,7 @@
 <template name="userfeedback">
     {{#unless currTopic}}
-     <div class="" style="height:100vh; margin-top:-50px;">
-     <div class="SubHeaderWrapper">
+     <div class="ContentBg" style="height:100vh; margin-top:-50px;">
+     <div class="SubHeaderWrapper feedbackPageHearder">
 
         <div class="SubHeaderLeftBg col-md-9 col-lg-8 no-padding">
 <!--
@@ -200,7 +200,7 @@
 -->
     </div>
     {{/unless}} 
-     <div class="" style="height:100vh; margin-top:-50px;">
+     <div class="ContentBg" style="height:100vh; margin-top:-50px;">
     {{#if currTopic}}
 <!--
 
@@ -214,7 +214,7 @@
     </header>
 -->
     
-      <div class="SubHeaderWrapper">
+      <div class="SubHeaderWrapper feedbackPageHearder">
 
         <div class="SubHeaderLeftBg col-md-12 col-lg-12 no-padding">
 <!--
